--- a/ru/404.html
+++ b/ru/404.html
@@ -8,20 +8,20 @@
   <body>
       <nav>
   
-    <a href="/ru/" >Home</a>
+    <a href="/" >Home</a>
   
-    <a href="/ru/about/" >About</a>
+    <a href="/about/" >About</a>
   
-    <a href="/ru/aza/" >Aza</a>
+    <a href="/aza/" >Aza</a>
   
 </nav>
 
  
      
-<a  href=" /404.html ">en</a> |
+<a style="font-weight: bold;" href=" /404.html ">en</a> |
   
      
-<a style="font-weight: bold;" href=" /ru/404.html ">ru</a> |
+<a  href=" /ru/404.html ">ru</a> |
   
 
       <style type="text/css" media="screen">
