--- a/ru/index.html
+++ b/ru/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Александр Шевцов</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <script src="/assets/js/main.js"></script>
   </head>
   <body>
       <nav>
@@ -11,8 +12,6 @@
     <a href="/ru/" class="current">Home</a>
   
     <a href="/ru/about/" >About</a>
-  
-    <a href="/ru/aza/" >Aza</a>
   
 </nav>
 
@@ -24,8 +23,8 @@
 <a style="font-weight: bold;" href=" /ru/ ">ru</a> |
   
 
-      <h2 id="привет">Привет</h2>
-<p><img src="/assets/images/im.jpg" width="25%" height="25%" /></p>
+      <p><img src="/assets/images/im.jpg" width="25%" height="25%" /></p>
+<h2 id="hej-hej">Hej-hej!</h2>
 
 <p>Это страница Александра Шевцова.</p>
 
@@ -33,6 +32,10 @@
 
 <p>Обычно я представляюсь математиком, хотя сферы моей деятельности довольно различны.
 Так, у меня глубокие знания математики. К ней прилагается криптография, современные ИТ, блокчейн.</p>
+
+<div class="tooltip">Jack of all trades.
+  <span class="tooltiptext">master of none</span>
+</div>
 
 <h2 id="чем-я-занимался">Чем я занимался</h2>
 <ol>
@@ -56,17 +59,49 @@
 <p><a href="https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q">https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q</a></p>
 
 <h2 id="ссылки">Ссылки</h2>
+<p><a href="https://t.me/randomlogin"><img src="/assets/images/telegram.svg" alt="logo" /></a>
+<a href="https://vk.com/id9115173"><img src="/assets/images/vk.svg" alt="logo" /></a>
+<a href="https://instagram.com/randomlogin76/"><img src="/assets/images/inst.png" alt="logo" /></a>
+<a href="https://last.fm/user/shewtsov"><img src="/assets/images/lastfm.svg" alt="logo" /></a>
+<a href="https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q"><img src="/assets/images/youtube.png" alt="logo" /></a></p>
 
-<p><a href="https://vk.com/id9115173">vk</a>
-<a href="https://hh.ru/applicant/resumes/view?resume=a6daa2bcff068b92680039ed1f45695a736637">hh</a></p>
+<p><a href="https://hh.ru/applicant/resumes/view?resume=a6daa2bcff068b92680039ed1f45695a736637">hh</a></p>
 
-<p><a href="https://instagram.com/randomlogin76/">instagram</a></p>
-
-<p><a href="https://last.fm/user/shewtsov">lastfm</a></p>
-
-<p><a href="https://t.me/randomlogin">telegram</a></p>
-
-<p><a href="https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q">youtube</a></p>
+<h2 id="ключ">Ключ</h2>
+<p>Публичный ключ. Зашифрованный текст смогу прочитать только я.</p>
+<div id="pgpKey" style="display: none">
+<pre>-----BEGIN PGP PUBLIC KEY BLOCK-----
+mQENBFXM5gMBCADI7hGTegsa7vVDZqJmmAFur6C2ejX8WuZd34+OaHbPot9N9GZc
+ScdijH/TAKgYqXOBENCaaLnqVYohth0FuTjEQOQwYNzSwRrYszEI879SwStWlxq/
+8YNNS6fhFVoBqzB0dl3yVinBGZPmLljsEMurMWStvU6jSt+Yv9LtCEgcJ/ikh4K1
+3jj92XFU4GkQtZhcQMeT/3vm6N2MToR9ibUZJUtIX6LKJY3x42o0sVGEPc5laNK4
+/sy+TbbjJwGZbUWQY3fxNJV15W+LdYCcPpIu3k+WBLt1okd6GMOsm5KTcnha52KR
+vRSA/AfMAxBARlOF5XCfmKg9lcZ27IxOaoiNABEBAAG0LEFsZXhhbmRlciBTaGV2
+dHNvdiA8cmFuZG9tbG9naW43NkBnbWFpbC5jb20+iQE+BBMBAgAoBQJVzOYDAhsD
+BQkJZgGABgsJCAcDAgYVCAIJCgsEFgIDAQIeAQIXgAAKCRBrQUWAQpELwwbXB/0c
+fm0EBkbbtYFBChJqUtFI7TRmSiSIeEyt3qNhSyrGU7EN2MrTXzrWU86uqsGnm/PB
+n9plebxPP0Tg6EGZdqwkhIDCmJCnrB+jye4KLdbT86OjzMgkiaHKoHRBC5ozqjWf
+Lv5ZxRhrJfYqAHV+ojrVAkoscj/JucJXUNHCTaYhnsAIU7cT0UoKLUQjz1hrWvgo
+78GXCtRLXjnnoUa7Y2QDt2OVNPOXrLAzkrtfF89ZR6cvaibZnQ8fCwCseg5JNHBM
++Nst3Kb93P0cHh3L9I158Jn3J5yVYSdwuVr/GUNGRRTyIQaCkbK42/cZVN0xB7L5
+8dW34c8dt3R5b4SU2vDBuQENBFXM5gMBCADfAGZT3g/dNWq8yrPbc9HsKvi4/+KS
+hHLYOCKrbE56LByE7qG9g9dIDKwRiLYbhP4G8mfUHtlPre/5Dao6zqDeJIoUPd9U
+BsSEoxaFLJ5+uP1HpUw/CkruAPuw+H3YHS0Ls/j1IwCJKQQZAeu0K/Zjrr9gVYdT
+J1GaUVHET2RQLSkSeCLIruLxG3bVMvA0juW1EKmTI0WCRlSRbtieYTLgQ240hZrB
+Y+PtQg26dfbVHWiQb9r/SYFwr+hAiozwq96p1KlrkmkFxZFgkV9AGzZdWF6uCjw6
+8KAJZHJ7QQME2xvzWK2Y9+PKlAcMSwEnOIGJSJoHvwW4nTXJjmAi0V2pABEBAAGJ
+ASUEGAECAA8FAlXM5gMCGwwFCQlmAYAACgkQa0FFgEKRC8NA8Qf/ZGl25TmuL8jt
+pApgaaRnuRkSLyNPM8I9jYCTFDLqjeeMYJYPeeNErwEnu6dczpsDcJ8IbRBMwFlz
+Lv7GmriZ5JWps1VzTCilKX+bPog/95zyW36c6bf0hu++xuj3vtsGjD5Rvg6Y8cw+
+5CJZwRA5CBmArRkeydnlWyRliLYing4Ar2g3m44VlYm92hSqI9ST4nm40BE4tzRk
+ohFvMwyeZEQSVD2rqyrBWd3Kj7LzMkOyyg1rMcOiuXsqKbNKTVqXLWi0nlqGv5a/
+ehbhm/dHgUcmzKbagIAmpH4z3Ow5C7/7DKAED0c6yjwHw9UmYl81N1upzSQeIx6j
+2EvP/eMKog==
+=EBcx
+-----END PGP PUBLIC KEY BLOCK-----
+</pre>
+</div>
+<p><button onclick="showKey()" id="showKeyButton">Show</button></p>
 
   </body>
 </html>
