--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
   
     <a href="/" class="current">Home</a>
   
-    <a href="/about/" >About</a>
-  
 </nav>
 
  
@@ -23,25 +21,71 @@
 <a  href=" /ru/ ">ru</a> |
   
 
-      <p><img src="/assets/images/im.jpg" width="25%" height="25%" /></p>
+      <!-- Хули палишь? -->
+<p><br /></p>
+<div class="card">
+<img src="/assets/images/myself.jpg" />
+<img src="/assets/images/myself2.jpg" class="img-top" />
+</div>
+
 <h2 id="hej-hej">Hej-hej!</h2>
 <p>You are at the personal webpage of Alexander Shevtsov.</p>
 
 <h2 id="bio">Bio</h2>
 
-<p>Usually I introduce myself as a mathematician, though my activites vary drastically.
-So I have a deep knoweledge of mathematics. Cryptography, modern IT, blockchain.</p>
-<div class="tooltip">Jack of all trades.
-  <span class="tooltiptext">master of none</span>
+<h3 id="academic-and-education">Academic and education</h3>
+<p>For me education is in some sense broadening the horizons, so my studies vary from linguistics and cryptography to quantum physics and cosmology. Still, I’d introduce myself as a mathematician.</p>
+
+<p>Graduated from Belarusian State University with bachelor’s degree thesis: the density of Cartan subalgebras in the variety of abelian subalgebras of complex semisimple Lie algebras.</p>
+
+<p>Currently I’m on the final year of master’s degree in mathematics at <a href="https://math.hse.ru/en/">HSE faculty of mathematics</a> with 1st year term paper topic: structure of the automorphism group of a finite-dimensional associative algebra.</p>
+
+<div>
+My mathematical background starts with a solid foundation in topology, algebra and analysis, proceeding with further knowledge of
+ differential geometry, algebraic geometry, <div class="tooltip">Lie theory<span class="tooltiptext" style="width: 200px">it has nothing in common with the falsehood</span></div>, category theory, computer science, model theory, classical physics
+as well as <div class="tooltip">general relativity and quantum physics <span class="tooltiptext">these fields are not less mathematics than physics</span></div> and computational mathematics. I hate advanced branches of analysis, though.
 </div>
 
-<h2 id="things-i-did">Things I did:</h2>
+<p>Sometimes I participate algebra-related seminars of <a href="http://mms.mathnet.ru/">Moscow Mathematical Society</a>, <a href="https://www.hse.ru/en/staff/arjantsev">Ivan
+Arjantsev’s</a> (he’s the scientific advisor of mine) seminar on the additive group
+actions, and participated in <a href="https://en.wikipedia.org/wiki/Dessin_d%27enfant">dessin d’enfant</a> seminar of <a href="http://www.mathnet.ru/person19967">George
+Shabat</a> in the past.
+I’ve also took few courses at <a href="http://ium.mccme.ru">Independent University of Moscow</a>.</p>
 
-<h3 id="academic">Academic</h3>
-<p>MIPT, IUM</p>
+<h3 id="business">Business</h3>
+
+<div>Long time ago I was a freelancer, doing some web development, maintaining cryptographic gem, creating
+proof-of-concept solutions (for example in <a href="https://en.wikipedia.org/wiki/Haskell_(programming_language)">haskell</a>), and even <div class="tooltip">writing educational <a href="#articles">articles</a> about cryptography<span class="tooltiptext">could you think such a work is done by freelancers?</span>.
+</div></div>
+
+<p>As a professional mathematician with knowledge of all the intrinsic capabilities and pitfails of the modern cryptography, it was quite straightforward to
+spend few years in the newly emergent blockchain sphere.</p>
+
+<div>From the most recent activities, I was a <div class="tooltip">CEO of an ICO <span class="tooltiptext" style="width: 150px">did for the rhyme!</span></div> <a href="https://jury.online">startup</a> (though, I consider it a fail), being
+<div class="tooltip">the jack of all trades: <span class="tooltiptext">master of none</span> </div> writing the
+<a href="/materials/WP.pdf">whitepapers</a>, creating smart contracts, pitching the project at conferences 
+(<a href="https://www.youtube.com/watch?v=azlZ8EWyotg">d10e conference in Seoul</a>), organising the workflow, hiring and firing
+employees, dealing with clients, developing kyc policies, even node and server management. Still, I left in the mid 2018.
+</div>
+
+<p>During that time I was also a technical consultant/architect in a research/working group for <a href="https://array.io">another blockchain project</a> developing the ledger based on
+the DPoS consensus algorithm, with Turing-complete smart contracts backward compatibile with Ethereum contracts, sophisticated
+services like built-in name service, state machine proxy, broad and delegateable account rights, and innovative funding
+<a href="#ido">approach</a>. My participation
+included cryptography consulting, virtual machine workflow (backward compatibility with the Ethereum smart-contracts), key
+management, economics and security from the game theory perspective. The project was backed by <a href="https://krypton.capital">venture capital fund</a>.</p>
+
+<p>I really enjoyed creating smart contracts, as they are tiny, very efficient and independent pieces of code demanding no
+library dependencies. Here are some examples:</p>
 
 <ol>
-  <li>Few educational articles about cryptography
+  <li><a href="https://etherscan.io/address/0x03a82e40049bcab41f6207a91134f244a56b850c#code">Initial Development Offering</a> <a name="ido">concept, description in the source code.</a></li>
+  <li><a href="https://github.com/randomlogin/hkk-crowdsale">Typical token and crowdsale contracts</a> for tokens to be purchased via Ether. The price is fixed in USD, so it’s updated via server script which pulld info from Bitfinex exchange.</li>
+</ol>
+
+<h3 id="also">Also</h3>
+<ol>
+  <li><a name="articles"> Educational cryptography articles</a>
     <ul>
       <li><a href="/materials/aes.pdf">AES</a></li>
       <li><a href="/materials/hashing_algorithms.pdf">hashing algorithms</a></li>
@@ -49,31 +93,25 @@ So I have a deep knoweledge of mathematics. Cryptography, modern IT, blockchain.
       <li><a href="/materials/prng.pdf">pseudo-random number generators</a></li>
     </ul>
   </li>
-  <li>Presented Jury.Online project at d10e conferecne in Seoul <a href="https://www.youtube.com/watch?v=azlZ8EWyotg">https://www.youtube.com/watch?v=azlZ8EWyotg</a></li>
-  <li>Mathematics videos (Russian)</li>
-  <li>sdfdgdfgdf</li>
+  <li><a href="https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q">Mathematics videos (Russian)</a></li>
+  <li><a href="https://vk.com/photo-148646647_456239051">Public speaks about blockchain.</a></li>
 </ol>
 
-<h2 id="things-i-do">Things I do:</h2>
+<h2 id="links-and-contacts">Links and contacts</h2>
+<p>Preferred way of contacting descending from left to right.</p>
 
-<p><a href="https://t.me/metatema">Telegram channel with some things around</a></p>
-
-<p><a href="https://vk.com/korotkayassylka">https://vk.com/korotkayassylka</a></p>
-
-<p><a href="https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q">https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q</a></p>
-
-<h2 id="social">Social:</h2>
-
-<p><a href="https://t.me/randomlogin"><img src="/assets/images/telegram.svg" alt="logo" /></a>
+<p><a href="mailto:randomlogin76@gmail.com"><img src="/assets/images/email.png" alt="logo" /></a>
+<a href="https://t.me/randomlogin"><img src="/assets/images/telegram.svg" alt="logo" /></a>
 <a href="https://vk.com/id9115173"><img src="/assets/images/vk.svg" alt="logo" /></a>
 <a href="https://instagram.com/randomlogin76/"><img src="/assets/images/inst.png" alt="logo" /></a>
 <a href="https://last.fm/user/shewtsov"><img src="/assets/images/lastfm.svg" alt="logo" /></a>
-<a href="https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q"><img src="/assets/images/youtube.png" alt="logo" /></a></p>
+<a href="https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q"><img src="/assets/images/youtube.png" alt="logo" /></a>
+<a href="https://github.com/randomlogin/"><img src="/assets/images/github.svg" alt="logo" /></a></p>
 
-<p><a href="https://hh.ru/applicant/resumes/view?resume=a6daa2bcff068b92680039ed1f45695a736637">hh</a></p>
+<p>Current location: Moscow, Russia.</p>
 
 <h2 id="key">Key</h2>
-<p>My key for private communication. Only I can read the encrypted text.</p>
+<p>My key for private communication. Only I can read the encrypted text. Just in case.</p>
 <div id="pgpKey" style="display: none">
 <pre>-----BEGIN PGP PUBLIC KEY BLOCK-----
 mQENBFXM5gMBCADI7hGTegsa7vVDZqJmmAFur6C2ejX8WuZd34+OaHbPot9N9GZc
