changed tooltip size

--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
 <h3 id="academic-and-education">Academic and education</h3>
 <p>For me education is in some sense broadening the horizons, so my studies vary from linguistics and cryptography to quantum physics and cosmology. Still, I’d introduce myself as a mathematician.</p>
 
-<p>Graduated from Belarusian State University with bachelor’s degree thesis: the density of Cartan subalgebras in the variety of abelian subalgebras of complex semisimple Lie algebras.</p>
-
-<p>Currently I’m on the final year of master’s degree in mathematics at <a href="https://math.hse.ru/en/">HSE faculty of mathematics</a> with 1st year term paper topic: structure of the automorphism group of a finite-dimensional associative algebra.</p>
+<p>Graduated from Belarusian State University with bachelor’s degree thesis: the density of Cartan subalgebras in the variety of abelian subalgebras of complex semisimple Lie algebras.
+Currently I’m on the final year of master’s degree in mathematics at <a href="https://math.hse.ru/en/">HSE faculty of mathematics</a> with 1st year term paper topic: structure of the automorphism group of a finite-dimensional associative algebra.</p>
 
 <div>
 My mathematical background starts with a solid foundation in topology, algebra and analysis, proceeding with further knowledge of
