--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ employees, dealing with clients, developing kyc policies, even node and server m
 </div>
 
 <p>During that time I was also a technical consultant/architect in a research/working group for <a href="https://array.io">another blockchain project</a> developing the ledger based on
-the DPoS consensus algorithm, with Turing-complete smart contracts backward compatibile with Ethereum contracts, sophisticated
+the <a href="https://en.bitcoinwiki.org/wiki/DPoS">DPoS</a> consensus algorithm, with Turing-complete smart contracts backward compatibile with Ethereum contracts, sophisticated
 services like built-in name service, state machine proxy, broad and delegateable account rights, and innovative funding
 <a href="#ido">approach</a>. My participation
 included cryptography consulting, virtual machine workflow (backward compatibility with the Ethereum smart-contracts), key
@@ -94,6 +94,7 @@ library dependencies. Here are some examples:</p>
   </li>
   <li><a href="https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q">Mathematics videos (Russian)</a></li>
   <li><a href="https://vk.com/photo-148646647_456239051">Public speaks about blockchain.</a></li>
+  <li><a href="https://t.me/metatema">Things I see around</a></li>
 </ol>
 
 <h2 id="links-and-contacts">Links and contacts</h2>
