--- a/ru/index.html
+++ b/ru/index.html
@@ -47,8 +47,8 @@
 Закончил несколько курсов <a href="http://ium.mccme.ru">Независимого Московского Университета</a>.</p>
 
 <h3 id="деловое">Деловое</h3>
-<div>Когда-то я был фрилансером, занимавшимся веб-разработкой, поддерживал криптографический гем, писал лабы и proof-of-concept программы (например на <a href="https://ru.wikipedia.org/wiki/Haskell">хаскеле</a>), и даже <div class="tooltip">писал образовательные <a href="#articles">статьи</a> по криптографии.<span class="tooltiptext" style="width:200px">кто бы мог подумать, что этим занимаются фрилансеры?</span>
-</div></div>
+<div>Когда-то я был фрилансером, занимавшимся веб-разработкой, поддерживал криптографический гем, писал лабы и
+proof-of-concept программы (например на <a href="https://ru.wikipedia.org/wiki/Haskell">хаскеле</a>), и даже <div class="tooltip">писал образовательные <a href="#articles">статьи</a> по криптографии.<span class="tooltiptext" style="width:250px">кто бы мог подумать, что этим занимаются фрилансеры?</span> </div></div>
 <p>Будучи профессиональным математиком со знанием всех внутренних недостатков и преимуществ современной криптографии, оказалось довольно очевидно провести пару лет в сфере блокчейна.</p>
 
 <div>Из самого недавнего, я был CEO одного <a href="https://jury.online">ICO-стартапа</a> (по мне, он кончил неудачно), там я занимался буквально всем:
