--- a/ru/index.html
+++ b/ru/index.html
@@ -48,7 +48,7 @@
 
 <h3 id="деловое">Деловое</h3>
 <div>Когда-то я был фрилансером, занимавшимся веб-разработкой, поддерживал криптографический гем, писал лабы и
-proof-of-concept программы (например на <a href="https://ru.wikipedia.org/wiki/Haskell">хаскеле</a>), и даже <div class="tooltip">писал образовательные <a href="#articles">статьи</a> по криптографии.<span class="tooltiptext" style="width:250px">кто бы мог подумать, что этим занимаются фрилансеры?</span> </div></div>
+proof-of-concept программы (например, на <a href="https://ru.wikipedia.org/wiki/Haskell">хаскеле</a>), и даже <div class="tooltip">писал образовательные <a href="#articles">статьи</a> по криптографии.<span class="tooltiptext" style="width:250px">кто бы мог подумать, что этим занимаются фрилансеры?</span> </div></div>
 <p>Будучи профессиональным математиком со знанием всех внутренних недостатков и преимуществ современной криптографии, оказалось довольно очевидно провести пару лет в сфере блокчейна.</p>
 
 <div>Из самого недавнего, я был CEO одного <a href="https://jury.online">ICO-стартапа</a> (по мне, он кончил неудачно), там я занимался буквально всем:
@@ -77,7 +77,10 @@ proof-of-concept программы (например на <a href="https://ru.w
       <li><a href="/materials/prng.pdf">Псевдослучайные генераторы чисел</a></li>
     </ul>
   </li>
-  <li><a href="https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q">Видосы о математике</a></li>
+  <li>
+    <p><a href="https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q">Видосы о математике</a></p>
+  </li>
+  <li><a href="https://t.me/metatema">Что я наблюдаю вокруг</a></li>
 </ol>
 
 <h2 id="ссылки-и-контакты">Ссылки и контакты</h2>
