--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@ library dependencies. Here are some examples:</p>
       <li><a href="/materials/prng.pdf">pseudo-random number generators</a></li>
     </ul>
   </li>
-  <li><a href="https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q">Mathematics videos (Russian)</a>
-<a href="&gt; ## Things I do [Telegram channel with things I see around](https://t.me/metatema) &lt;https://vk.com/korotkayassylka&gt; &lt;https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q">comment</a>: &lt;&gt; 4. <a href="https://vk.com/photo-148646647_456239051">Public speaks about blockchain</a></li>
+  <li><a href="https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q">Mathematics videos (Russian)</a></li>
   <li><a href="https://t.me/metatema">Things I see around</a></li>
 </ol>
 
