--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
      
 <a style="font-weight: bold;" href=" / ">en</a> |
   
-     
-<a  href=" /ru/ ">ru</a> |
-  
 
       <!-- Хули палишь? -->
 <p><br /></p>
@@ -41,7 +38,7 @@ Currently I’m on the final year of master’s degree in mathematics at <a href
 
 <div>
 My mathematical background starts with a solid foundation in topology, algebra and analysis, proceeding with further knowledge of
- differential geometry, algebraic geometry, <div class="tooltip">Lie theory<span class="tooltiptext" style="width: 200px">it has nothing in common with the falsehood</span></div>, category theory, computer science, model theory, classical physics
+ differential geometry, algebraic geometry, <div class="tooltip">Lie theory<span class="tooltiptext" style="width: 120%">it has nothing in common with the falsehood</span></div>, category theory, computer science, model theory, classical physics
 as well as <div class="tooltip">general relativity and quantum physics <span class="tooltiptext">these fields are not less mathematics than physics</span></div> and computational mathematics. I hate advanced branches of analysis, though.
 </div>
 
