--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ as well as <div class="tooltip">general relativity and quantum physics <span cla
 
 <div>
 My mathematical background starts with a solid foundation in topology, algebra and analysis, proceeding with further knowledge of
- differential geometry, algebraic geometry, <div class="tooltip" aria-label="it has nothing in common with the falsehood" data-balloon-pos="up">Lie theory</div>, category theory, computer science, model theory, classical physics
+ differential geometry, algebraic geometry, <div style="display: inline-block" aria-label="it has nothing in common with the falsehood" data-balloon-pos="up">Lie theory</div>, category theory, computer science, model theory, classical physics
 as well as <div class="tooltip">general relativity and quantum physics <span class="tooltiptext">these fields are not less mathematics than physics</span></div> and computational mathematics. I hate advanced branches of analysis, though.
 </div>
 
