--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ as well as <div class="tooltip">general relativity and quantum physics <span cla
 <div>
 My mathematical background starts with a solid foundation in topology, algebra and analysis, proceeding with further knowledge of
  differential geometry, algebraic geometry, <div style="display: inline" aria-label="it has nothing in common with the falsehood" data-balloon-pos="up">Lie theory</div>, category theory, computer science, model theory, classical physics
-as well as <div class="tooltip">general relativity and quantum physics <span class="tooltiptext">these fields are not less mathematics than physics</span></div> and computational mathematics. I hate advanced branches of analysis, though.
+as well as <div aria-label="these fields are not less mathematics than physics" data-balloon-pos="up">general relativity and quantum physics</div> and computational mathematics. I hate advanced branches of analysis, though.
 </div>
 
 <p>Sometimes I participate algebra-related seminars of <a href="http://mms.mathnet.ru/">Moscow Mathematical Society</a>, <a href="https://www.hse.ru/en/staff/arjantsev">Ivan
@@ -58,14 +58,15 @@ I’ve also took few courses at <a href="http://ium.mccme.ru">Independent Univer
 <h3 id="business">Business</h3>
 
 <div>Long time ago I was a freelancer, doing some web development, maintaining cryptographic gem, creating
-proof-of-concept solutions (for example in <a href="https://en.wikipedia.org/wiki/Haskell_(programming_language)">haskell</a>), and even <div class="tooltip">writing educational <a href="#articles">articles</a> about cryptography<span class="tooltiptext">could you think such a work is done by freelancers?</span>.
+proof-of-concept solutions (for example in <a href="https://en.wikipedia.org/wiki/Haskell_(programming_language)">haskell</a>), and even <div aria-label="could you
+think such a work is done by freelancers?" data-balloon-pos="up">writing educational <a href="#articles">articles</a> about cryptography.
 </div></div>
 
 <p>As a professional mathematician with knowledge of all the intrinsic capabilities and pitfails of the modern cryptography, it was quite straightforward to
 spend few years in the newly emergent blockchain sphere.</p>
 
-<div>From the most recent activities, I was a <div class="tooltip">CEO of an ICO <span class="tooltiptext" style="width: 150px">did for the rhyme!</span></div> <a href="https://jury.online">startup</a> (though, I consider it a fail), being
-<div class="tooltip">the jack of all trades: <span class="tooltiptext">master of none</span> </div> writing the
+<div>From the most recent activities, I was a <div data-balloon-pos="up" aria-label="did for the rhyme!">CEO of an ICO</div> <a href="https://jury.online">startup</a> (though, I consider it a fail), being
+<div data-balloon-pos="up" aria-label="master of none">the jack of all trades: </div> writing the
 <a href="/materials/WP.pdf">whitepapers</a>, creating smart contracts, pitching the project at conferences 
 (<a href="https://www.youtube.com/watch?v=azlZ8EWyotg">d10e conference in Seoul</a>), organising the workflow, hiring and firing
 employees, dealing with clients, developing kyc policies, even node and server management. Still, I left in the mid 2018.
