--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <h2 id="bio">Bio</h2>
 
-<h3 id="academic-and-education">Academic and education</h3>
+<h3 id="academic-and-education">Academic and educational</h3>
 <p>For me education is in some sense broadening the horizons, so my studies vary from linguistics and cryptography to quantum physics and cosmology. Still, I’d introduce myself as a mathematician.</p>
 
 <p>Graduated from Belarusian State University with bachelor’s degree thesis: the density of Cartan subalgebras in the variety of abelian subalgebras of complex semisimple Lie algebras.
