--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <!-- Хули палишь? -->
 <p><br /></p>
 <div class="card">
-<img src="/assets/images/myself.jpg" />
-<img src="/assets/images/myself2.jpg" class="img-top" />
+<img src="/assets/images/bw_myself.jpg" />
+<img src="/assets/images/bw_myself2.jpg" class="img-top" />
 </div>
 
 <h2 id="hej-hej">Hej-hej!</h2>
@@ -84,7 +84,7 @@ library dependencies. Here are some examples:</p>
 
 <ol>
   <li><a href="https://etherscan.io/address/0x03a82e40049bcab41f6207a91134f244a56b850c#code">Initial Development Offering</a> <a name="ido">concept, description in the source code.</a></li>
-  <li><a href="https://github.com/randomlogin/hkk-crowdsale">Typical token and crowdsale contracts</a> for tokens to be purchased via Ether. The price is fixed in USD, so it’s updated via server script which pulld info from Bitfinex exchange.</li>
+  <li><a href="https://github.com/randomlogin/hkk-crowdsale">Typical token and crowdsale contracts</a> for tokens to be purchased for Ether. The price is fixed in USD, so it’s updated via server script which pulld info from Bitfinex exchange.</li>
 </ol>
 
 <h3 id="also">Also</h3>
