deleted useless links'

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <h2 id="bio">Bio</h2>
 
-<h3 id="academic-and-education">Academic and educational</h3>
+<h3 id="academic-and-education">Academic and education</h3>
 <p>For me education is in some sense broadening the horizons, so my studies vary from linguistics and cryptography to quantum physics and cosmology. Still, I’d introduce myself as a mathematician.</p>
 
 <p>Graduated from Belarusian State University with bachelor’s degree thesis: the density of Cartan subalgebras in the variety of abelian subalgebras of complex semisimple Lie algebras.
@@ -101,15 +101,10 @@ library dependencies. Here are some examples:</p>
   <li><a href="https://t.me/metatema">Things I see around</a></li>
 </ol>
 
-<h2 id="links-and-contacts">Links and contacts</h2>
-<p>Preferred way of contacting descending from left to right.</p>
+<h2 id="contacts">Contacts</h2>
 
 <p><a href="mailto:randomlogin76@gmail.com"><img src="/assets/images/email.png" alt="logo" /></a>
-<a href="https://t.me/randomlogin"><img src="/assets/images/telegram.svg" alt="logo" /></a>
-<a href="https://vk.com/id9115173"><img src="/assets/images/vk.svg" alt="logo" /></a>
-<a href="https://instagram.com/randomlogin76/"><img src="/assets/images/inst.png" alt="logo" /></a>
-<a href="https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q"><img src="/assets/images/youtube.png" alt="logo" /></a>
-<a href="https://github.com/randomlogin/"><img src="/assets/images/github.svg" alt="logo" /></a></p>
+<a href="https://t.me/randomlogin"><img src="/assets/images/telegram.svg" alt="logo" /></a></p>
 
 <p>Current location: Moscow, Russia.</p>
 
