--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ proof-of-concept solutions (for example in <a href="https://en.wikipedia.org/wik
 think such a work is done by freelancers?" data-balloon-pos="up">writing educational <a href="#articles">articles</a> about cryptography.
 </div></div>
 
-<p>As a professional mathematician with knowledge of all the intrinsic capabilities and pitfails of the modern cryptography, it was quite straightforward to
+<p>As a professional mathematician with knowledge of all the intrinsic capabilities and pitfalls of the modern cryptography, it was quite straightforward to
 spend few years in the newly emergent blockchain sphere.</p>
 
 <div>From the most recent activities, I was a <div data-balloon-pos="up" aria-label="did for the rhyme!">CEO of an ICO</div> <a href="https://jury.online">startup</a> (though, I consider it a fail), being
@@ -73,7 +73,7 @@ employees, dealing with clients, developing kyc policies, even node and server m
 </div>
 
 <p>During that time I was also a technical consultant/architect in a research/working group for <a href="https://array.io">another blockchain project</a> developing the ledger based on
-the <a href="https://en.bitcoinwiki.org/wiki/DPoS">DPoS</a> consensus algorithm, with Turing-complete smart contracts backward compatibile with Ethereum contracts, sophisticated
+the <a href="https://en.bitcoinwiki.org/wiki/DPoS">DPoS</a> consensus algorithm, with Turing-complete smart contracts backward compatible with Ethereum contracts, sophisticated
 services like built-in name service, state machine proxy, broad and delegateable account rights, and innovative funding
 <a href="#ido">approach</a>. My participation
 included cryptography consulting, virtual machine workflow (backward compatibility with the Ethereum smart-contracts), key
@@ -84,7 +84,7 @@ library dependencies. Here are some examples:</p>
 
 <ol>
   <li><a href="https://etherscan.io/address/0x03a82e40049bcab41f6207a91134f244a56b850c#code">Initial Development Offering</a> <a name="ido">concept, description in the source code.</a></li>
-  <li><a href="https://github.com/randomlogin/hkk-crowdsale">Typical token and crowdsale contracts</a> for tokens to be purchased for Ether. The price is fixed in USD, so it’s updated via server script which pulld info from Bitfinex exchange.</li>
+  <li><a href="https://github.com/randomlogin/hkk-crowdsale">Typical token and crowdsale contracts</a> for tokens to be purchased for Ether. The price is fixed in USD, so it’s updated via server script which pulled info from Bitfinex exchange.</li>
 </ol>
 
 <h3 id="also">Also</h3>
