--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@ library dependencies. Here are some examples:</p>
 
 <ol>
   <li><a href="https://etherscan.io/address/0x03a82e40049bcab41f6207a91134f244a56b850c#code">Initial Development Offering</a> <a name="ido">concept, description in the source code.</a></li>
-  <li><a href="https://github.com/randomlogin/hkk-crowdsale">Typical token and crowdsale contracts</a> for tokens to be purchased for Ether. The price is fixed in USD, so it’s updated via server script which pulled info from Bitfinex exchange.</li>
+  <li><a href="https://github.com/randomlogin/hkk-crowdsale">Typical token and crowdsale contracts</a> for tokens to be purchased for Ether. The price is fixed in USD, so it’s updated via server script which pulled info from the Bitfinex exchange.</li>
 </ol>
+
+<p>In 2019 I worked as a blockchain developer for <a href="https://dexpa.io/">dexpa.io</a>, porting Ethereum smart-contracts to the <a href="https://test.ton.org/">TON</a> blockchain and communicating with <a href="https://tonlabs.io/">TON labs</a> to help them test and debug SDKs they are creating.</p>
 
 <h3 id="also">Also</h3>
 <ol>
