--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ think such a work is done by freelancers?" data-balloon-pos="up">writing educati
 <p>As a professional mathematician with knowledge of all the intrinsic capabilities and pitfalls of the modern cryptography, it was quite straightforward to
 spend few years in the newly emergent blockchain sphere.</p>
 
-<div>From the most recent activities, I was a <div data-balloon-pos="up" aria-label="did for the rhyme!">CEO of an ICO</div> <a href="https://jury.online">startup</a> (though, I consider it a fail), being
+<div>From the most recent activities, I was a <div data-balloon-pos="up" aria-label="did it for the rhyme!">CEO of an ICO</div> <a href="https://jury.online">startup</a> (though, I consider it a fail), being
 <div data-balloon-pos="up" aria-label="master of none">the jack of all trades: </div> writing the
 <a href="/materials/WP.pdf">whitepapers</a>, creating smart contracts, pitching the project at conferences 
 (<a href="https://www.youtube.com/watch?v=azlZ8EWyotg">d10e conference in Seoul</a>), organising the workflow, hiring and firing
