--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,15 @@
     <title>About</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
     <script src="/assets/js/main.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157721779-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-157721779-2');
+    </script>
+
   </head>
   <body>
       <nav>
